refactor(Mission): 리스트 변환 수정